--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
                         <div v-show="enableLegend">
                             <propertyselect chname="图例位置" propkey="legend pos" :options="['south west','south east','north west','north east','outer north east']"></propertyselect>    
                         </div>
+                        <div v-show="td">
+                            <viewproperty chname="旋转角度" propkey="view"></viewproperty>
+                        </div>
                             <br><div class="paramhead">x轴</div>
                             <property chname="轴题" propkey="xlabel"></property>
                             <property chname="最小" propkey="xmin"></property>
@@ -377,6 +380,12 @@
         <tr>
             <td class="paramname">{{chname}}</td>
             <td style="display:none">{{propkey}}</td><td><input type="text" v-model="value" @keyup="ontichange"></td>
+        </tr>
+    </template>
+    <template id="viewtpl">
+        <tr @mouseleave="clearview" @mouseenter="showview">
+            <td class="paramname">{{chname}}</td>
+            <td style="display:none">{{propkey}}</td><td><input type="text" v-model="value" @keyup="onvichange" style="width: 100px;"></td><td><input type="text" v-model="valuex" @keyup="onvichange" style="width: 100px;"></td>
         </tr>
     </template>
     <template id="surplustpl">
