--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PGFPlots 代码生成器</title>
+    <title>PGFPlots 统计绘图编辑器</title>
     <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="main.css">
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
@@ -11,25 +11,27 @@
 </head>
 <body>
     <div class="nav">
-            <a id="title" href="https://logcreative.github.io/LaTeXSparkle/" target="_blank" class="logo"><svg style="fill: black; font-family: Times,'宋体'" width="144" height="35">
-                <text x="0" y="28" style="font-size: x-large">像</text>
-                <text x="21" y="23" style="font-size:large">模</text>
-                <text x="36" y="33" style="font-size: x-large">像</text>
-                <text x="56" y="28" style="font-size:x-large">样</text>
-                <text x="85" y="28" style="font-size:x-large">L</text>
-                <text x="92" y="23" style="font-size:large">A</text>
-                <text x="102" y="28" style="font-size:x-large">T</text>
-                <text x="114" y="33" style="font-size:x-large">E</text>
-                <text x="126" y="28" style="font-size:x-large">X</text>
-                </svg></a> · <a href="https://github.com/LogCreative/PGFPlotsEdt" target="_blank">PGFPlots 代码生成器 </a><div id="version" style="display: inline-block;"></div>
             <div id="extlinks">
-                <div>
+                <a id="title" href="https://logcreative.github.io/LaTeXSparkle/" target="_blank" class="logo"><svg style="fill: black; font-family: Times,'宋体'" width="144" height="35">
+                    <text x="0" y="28" style="font-size: x-large">像</text>
+                    <text x="21" y="23" style="font-size:large">模</text>
+                    <text x="36" y="33" style="font-size: x-large">像</text>
+                    <text x="56" y="28" style="font-size:x-large">样</text>
+                    <text x="85" y="28" style="font-size:x-large">L</text>
+                    <text x="92" y="23" style="font-size:large">A</text>
+                    <text x="102" y="28" style="font-size:x-large">T</text>
+                    <text x="114" y="33" style="font-size:x-large">E</text>
+                    <text x="126" y="28" style="font-size:x-large">X</text>
+                    </svg></a>
+                <!-- <div>
                     <a href="https://mirrors.rit.edu/CTAN/graphics/pgf/contrib/pgfplots/doc/pgfplots.pdf" target="_blank">PGFPlots 手册</a>
                 </div>
                 <div id="lang">
                     <a href="https://logcreative.github.io/PGFPlotsEdt/index.html">中文</a>|<a title="Under Construction">English</a>
-                </div>
+                </div> -->
             </div>
+            <a href="https://github.com/LogCreative/PGFPlotsEdt" target="_blank">PGFPlots 统计绘图编辑器 </a><br>
+            <div style="display: inline-block; color: rgba(128, 128, 128, 0.5);">PGFPlotsEdt <div id="version" style="display: inline-block;"></div></div>
     </div>
     <div class="container" id="app">
         <div id="panel-one" class="split">
