--- a/index.html
+++ b/index.html
@@ -30,8 +30,11 @@
                     <a href="https://logcreative.github.io/PGFPlotsEdt/index.html">中文</a>|<a title="Under Construction">English</a>
                 </div> -->
             </div>
-            <a href="https://github.com/LogCreative/PGFPlotsEdt" target="_blank">PGFPlots 统计绘图编辑器 </a><br>
-            <div style="display: inline-block; color: rgba(128, 128, 128, 0.5);">PGFPlotsEdt <div id="version" style="display: inline-block;"></div></div>
+            <img id="logo" src="res/logo/logo.svg" height="32px">
+            <div>
+                <a href="https://github.com/LogCreative/PGFPlotsEdt" target="_blank">PGFPlots 统计绘图编辑器 </a><br>
+                <div style="display: inline-block; color: rgba(128, 128, 128, 0.5);">PGFPlotsEdt <div id="version" style="display: inline-block;"></div></div>
+            </div>
     </div>
     <div class="container" id="app">
         <div id="panel-one" class="split">
