--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </head>
-<body >
+<body>
     <div id="app">
         <div class="nav">
             <div id="extlinks">
@@ -36,16 +36,16 @@
                 <a href="https://github.com/LogCreative/PGFPlotsEdt" target="_blank">PGFPlots 统计绘图编辑器 </a><br>
                 <div style="display: inline-block; color: rgba(128, 128, 128, 0.5);">PGFPlotsEdt <div id="version" style="display: inline-block;"></div></div>
                 <div id="template">
-                    <button class="tplbutton">折线图</button>
-                    <button class="tplbutton">折点图</button>
-                    <button class="tplbutton">散点图</button>
-                    <button class="tplbutton">柱形图</button>
-                    <button class="tplbutton">面积图</button>
-                    <button class="tplbutton">曲面图</button>
-                    <button class="tplbutton">等高图</button>
-                    <button class="tplbutton">直方图</button>
-                    <button class="tplbutton">箱式图</button>
-                    <button class="tplbutton">极坐标</button>
+                    <tplbutton tplname="折线图" :tplid="1"></tplbutton>
+                    <tplbutton tplname="折点图" :tplid="2"></tplbutton>
+                    <tplbutton tplname="散点图" :tplid="3"></tplbutton>
+                    <tplbutton tplname="柱形图" :tplid="4"></tplbutton>
+                    <tplbutton tplname="面积图" :tplid="5"></tplbutton>
+                    <tplbutton tplname="曲面图" :tplid="6"></tplbutton>
+                    <tplbutton tplname="等高图" :tplid="7"></tplbutton>
+                    <tplbutton tplname="直方图" :tplid="8"></tplbutton>
+                    <tplbutton tplname="箱式图" :tplid="9"></tplbutton>
+                    <tplbutton tplname="极坐标" :tplid="10"></tplbutton>
                 </div>
             </div>
     </div>
@@ -152,17 +152,17 @@
                         </div>
                         <div id="exprs">
                             <div v-for="comp in expressions" :key="comp.innerId">
-                                <expression :id="comp.id" :ontd="td" :onlegend="enableLegend"  ></expression>
+                                <expression :id="comp.id" :ontd="td" :onlegend="enableLegend" :inparam="comp.inparam" :indata="comp.indata" :instruct="comp.instruct"></expression>
                             </div>
                         </div>
                         <div id="coords">
                             <div v-for="comp in coordinates">
-                                <coordinate :id="comp.id" :ontd="td" :onlegend="enableLegend"></coordinate>
+                                <coordinate :id="comp.id" :ontd="td" :onlegend="enableLegend" :inparam="comp.inparam" :indata="comp.indata" :instruct="comp.instruct"></coordinate>
                             </div>
                         </div>
                         <div id="tables">
                             <div v-for="comp in tableps">
-                                <tablep :id="comp.id" :ontd="td" :onlegend="enableLegend" :enablesource="enablesource"></tablep>
+                                <tablep :id="comp.id" :ontd="td" :onlegend="enableLegend" :enablesource="enablesource" :inparam="comp.inparam" :indata="comp.indata" :instruct="comp.instruct"></tablep>
                             </div>
                         </div>
                         <div id="nodes" v-show="enablepin">
@@ -414,6 +414,11 @@
             <parambar ref="subparambar" :global="true" v-show="paramfoc" :command="command" :etd="ontd"></parambar>
         </div>        
     </template>
+    <template id="tplbutton">
+        <div class="tplbutton">
+            <button @click="addtpl">{{tplname}}</button>
+        </div>
+    </template>
     <script src="https://cdn.bootcdn.net/ajax/libs/vue/2.6.11/vue.js"></script>
     <script src="https://cdn.bootcdn.net/ajax/libs/vue-clipboard2/0.3.1/vue-clipboard.js"></script>
     <script src="https://cdn.bootcdn.net/ajax/libs/highlight.js/10.5.0/highlight.min.js"></script>
@@ -423,6 +428,7 @@
     <script src="js/getVersion.js"></script>
     <script src="js/dict_cn.js"></script>
     <script src="js/style_cn.js"></script>
+    <script src="js/tpl.js"></script>
     <script src="main.js"></script>
     <script>
         if(document.body.clientWidth>900){
