--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PGFPlots 统计绘图编辑器</title>
+    <link rel="icon" href="favicon.ico" sizes="64x64">
     <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="main.css">
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
