--- a/index.html
+++ b/index.html
@@ -25,12 +25,14 @@
                     <text x="114" y="33" style="font-size:x-large">E</text>
                     <text x="126" y="28" style="font-size:x-large">X</text>
                     </svg></a>
-                <!-- <div>
-                    <a href="https://mirrors.rit.edu/CTAN/graphics/pgf/contrib/pgfplots/doc/pgfplots.pdf" target="_blank">PGFPlots 手册</a>
+                <div id="poweredby">
+                    <!-- lang -->
+                    <!-- darkmode -->
+                    <a href="https://mirrors.sjtug.sjtu.edu.cn/CTAN/graphics/pgf/contrib/pgfplots/doc/pgfplots.pdf" target="_blank"><img src="res/poweredby/book.ico"></a>
+                    <a href="https://github.com/LogCreative/PGFPlotsEdt" target="_blank"><img src="res/poweredby/github.png"></a>
+                    <a href="https://cn.vuejs.org/" target="_blank"><img src="res/poweredby/vue.png"></a>
+                    <a href="https://latexonline.cc/" target="_blank"><img src="res/poweredby/latexonline.png"></a>
                 </div>
-                <div id="lang">
-                    <a href="https://logcreative.github.io/PGFPlotsEdt/index.html">中文</a>|<a title="Under Construction">English</a>
-                </div> -->
             </div>
             <img id="logo" src="res/logo/logo.svg" height="32px">
             <div>
