--- a/index.html
+++ b/index.html
@@ -25,16 +25,17 @@
                     <text x="114" y="33" style="font-size:x-large">E</text>
                     <text x="126" y="28" style="font-size:x-large">X</text>
                     </svg></a>
-                <div id="poweredby">
+                <div id="poweredby" class="accordion">
                     <!-- lang -->
                     <!-- darkmode -->
-                    <a href="https://mirrors.sjtug.sjtu.edu.cn/CTAN/graphics/pgf/contrib/pgfplots/doc/pgfplots.pdf" target="_blank"><img src="res/poweredby/book.ico"></a>
-                    <a href="https://github.com/LogCreative/PGFPlotsEdt" target="_blank"><img src="res/poweredby/github.png"></a>
-                    <a href="https://cn.vuejs.org/" target="_blank"><img src="res/poweredby/vue.png"></a>
-                    <a href="https://latexonline.cc/" target="_blank"><img src="res/poweredby/latexonline.png"></a>
+                    <a class="acckey" href="https://mirrors.sjtug.sjtu.edu.cn/CTAN/graphics/pgf/contrib/pgfplots/doc/pgfplots.pdf" target="_blank"><img src="res/poweredby/book.ico" class="icon"><div class="value">宏包文档</div></a>
+                    <a class="acckey" href="https://github.com/LogCreative/PGFPlotsEdt" target="_blank"><img src="res/poweredby/github.png"><div class="value">GitHub</div></a>
+                    <a class="acckey" href="https://cn.vuejs.org/" target="_blank"><img class="icon" src="res/poweredby/vue.png"><div class="value">Vue.js</div></a>
+                    <a class="acckey" href="https://latexonline.cc/" target="_blank"><img class="icon" src="res/poweredby/latexonline.png"><div class="value">LaTeXOnline</div></a>
+                    <a class="acckey" href="https://www.mathjax.org/" target="_blank"><img class="icon" src="res/poweredby/mathjax.ico"><div class="value">MathJax</div></a>
                 </div>
             </div>
-            <img id="logo" src="res/logo/logo.svg" height="32px">
+            <img id="logo" src="res/logo/logo.svg">
             <div>
                 <a href="https://github.com/LogCreative/PGFPlotsEdt" target="_blank">PGFPlots 统计绘图编辑器 </a><br>
                 <div style="display: inline-block; color: rgba(128, 128, 128, 0.5);">PGFPlotsEdt <div id="version" style="display: inline-block;"></div></div>
