--- a/index.html
+++ b/index.html
@@ -14,21 +14,23 @@
     <div id="app">
         <div class="nav" @mouseenter="animbck" @mouseleave="animfwd">
             <div id="extlinks">
-                <a id="title" href="https://logcreative.github.io/LaTeXSparkle/" target="_blank" class="logo"><svg style="fill: black; font-family: Times,'宋体'" width="144" height="35">
-                    <text x="0" y="28" style="font-size: x-large">像</text>
-                    <text x="21" y="23" style="font-size:large">模</text>
-                    <text x="36" y="33" style="font-size: x-large">像</text>
-                    <text x="56" y="28" style="font-size:x-large">样</text>
-                    <text x="85" y="28" style="font-size:x-large">L</text>
-                    <text x="92" y="23" style="font-size:large">A</text>
-                    <text x="102" y="28" style="font-size:x-large">T</text>
-                    <text x="114" y="33" style="font-size:x-large">E</text>
-                    <text x="126" y="28" style="font-size:x-large">X</text>
-                    </svg></a>
+                <a id="title" href="https://logcreative.github.io/LaTeXSparkle/" target="_blank" class="logo">
+                    <svg style="fill: black; font-family: Times,'宋体'" width="144" height="35">
+                        <text x="0" y="28" style="font-size: x-large">像</text>
+                        <text x="21" y="23" style="font-size:large">模</text>
+                        <text x="36" y="33" style="font-size: x-large">像</text>
+                        <text x="56" y="28" style="font-size:x-large">样</text>
+                        <text x="85" y="28" style="font-size:x-large">L</text>
+                        <text x="92" y="23" style="font-size:large">A</text>
+                        <text x="102" y="28" style="font-size:x-large">T</text>
+                        <text x="114" y="33" style="font-size:x-large">E</text>
+                        <text x="126" y="28" style="font-size:x-large">X</text>
+                    </svg>
+                </a>
                 <div id="poweredby" class="accordion">
-                    <!-- lang -->
+                    <a class="acckey" @click="changelang" target="_blank" style="cursor: pointer;" :title="$t('nav.lang_title')"><div class="icon" style="display: inline; font-weight: bold;">{{$t('nav.lang_icon')}} </div><div class="value">{{$t('nav.lang')}}</div></a>
                     <!-- darkmode -->
-                    <a class="acckey" href="https://mirrors.sjtug.sjtu.edu.cn/CTAN/graphics/pgf/contrib/pgfplots/doc/pgfplots.pdf" target="_blank"><img src="res/poweredby/book.ico" class="icon"><div class="value">宏包文档</div></a>
+                    <a class="acckey" href="https://mirrors.sjtug.sjtu.edu.cn/CTAN/graphics/pgf/contrib/pgfplots/doc/pgfplots.pdf" target="_blank"><img src="res/poweredby/book.ico" class="icon"><div class="value">{{ $t('nav.doc') }}</div></a>
                     <a class="acckey" href="https://github.com/LogCreative/PGFPlotsEdt" target="_blank"><img src="res/poweredby/github.png"><div class="value">GitHub</div></a>
                     <a class="acckey" href="https://cn.vuejs.org/" target="_blank"><img class="icon" src="res/poweredby/vue.png"><div class="value">Vue.js</div></a>
                     <a class="acckey" href="https://latexonline.cc/" target="_blank"><img class="icon" src="res/poweredby/latexonline.png"><div class="value">LaTeXOnline</div></a>
@@ -38,7 +40,7 @@
             <img id="logo" src="res/logo/logo.svg">
             <div>
                 <a href="https://github.com/LogCreative/PGFPlotsEdt" target="_blank">{{ $t('nav.title') }}</a><br>
-                <div style="display: inline-block; color: rgba(128, 128, 128, 0.5);">PGFPlotsEdt <div id="version" style="display: inline-block;"></div></div>
+                <div style="display: inline-block; color: rgba(128, 128, 128, 0.5);">{{ $t('nav.subtitle') }} <div id="version" style="display: inline-block;"></div></div>
                 <div id="template" class="accordion">
                     <tplbutton tplname="折线图" :tplid="1"></tplbutton>
                     <tplbutton tplname="折点图" :tplid="2"></tplbutton>
@@ -435,12 +437,10 @@
     <script src="https://cdn.bootcdn.net/ajax/libs/highlight.js/10.5.0/languages/latex.min.js"></script>
     <link href="https://cdn.bootcdn.net/ajax/libs/highlight.js/10.5.0/styles/vs.min.css" rel="stylesheet">
     <script src="https://cdn.bootcdn.net/ajax/libs/split.js/1.6.2/split.min.js"></script>
-    <script src="https://cdn.bootcdn.net/ajax/libs/vue-i18n/8.24.3/vue-i18n.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/vue-i18n/8.24.3/vue-i18n.min.js"></script>
     <script src="js/dict_cn.js"></script>
     <script src="js/style.js"></script>
     <script src="js/tpl.js"></script>
-    <script src="lang/cn.js"></script>
-    <script src="lang/en.js"></script>
     <script src="main.js"></script>
     <script>
         if(document.body.clientWidth>900){
